--- a/src/styles.css
+++ b/src/styles.css
@@ -5,14 +5,148 @@
     font-style: normal;
 }
 
+:root {
+    --bg-color: #ffffff;
+    --txt-color: #000000;
+    --btn-color: #5d95de;
+    --bdr-color: #363636;
+    --btn-txt-color: #000000;
+    --txt-backdrop: #ffffff;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --bg-color: #242424;
+        --txt-color: #9a9a9a;
+        --btn-color: #8b6cef;
+        --bdr-color: #363636;
+        --btn-txt-color: #000000;
+        --txt-backdrop: #202020;
+    }
+}
+
 * {
     font-family: 'RobotoMono NF', sans-serif;
+    background-color: var(--bg-color);
+    color: var(--txt-color);
+}
+
+a, button {
+    cursor: pointer;
+}
+
+.linkButton > a {
+    background-color: transparent;
+    text-decoration: none;
+    color: var(--btn-txt-color);
+}
+
+.linkButton {
+    color: var(--btn-txt-color);
+}
+
+button {
+    background-color: var(--btn-color);
+    border-radius: 6px;
+    border: 1px solid var(--bdr-color);
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
-
     padding: 0;
     margin: 0;
+
+    display: grid;
+    grid-template-rows: 1fr 4.5fr 0.5fr;
+    grid-template-columns: 1fr;
+}
+
+h1 {
+    margin-left: 0.5rem;
+}
+
+body > header {
+    align-self: center;
+    margin-bottom: auto;
+
+    -webkit-box-shadow: 0 3px 5px 1px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0 3px 5px 1px rgba(0,0,0,0.5);
+    box-shadow: 0 3px 5px 1px rgba(0,0,0,0.5);
+}
+
+body > header > .aboutMeContainer {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    gap: 1.5rem;
+    padding: 1rem 0;
+}
+
+body > main {
+    display: flex;
+    flex-direction: column;
+}
+
+body > main > .projectCardsContainer {
+    margin: 0 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 2rem;
+}
+
+body > main > .projectCardsContainer > .projectCard {
+    background-color: var(--txt-backdrop);
+
+    -webkit-box-shadow: 0 0 6px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0 0 6px 1px rgba(0,0,0,0.75);
+    box-shadow: 0 0 6px 1px rgba(0,0,0,0.75);
+}
+
+body > main > .projectCardsContainer > .projectCard > p,
+body > main > .projectCardsContainer > .projectCard > h2 {
+    margin-left: 0.25rem;
+}
+
+body > main > .projectCardsContainer > .projectCard * {
+    background-color: transparent;
+}
+
+.projectSS {
+    width: 100%;
+    height: 300px;
+    object-fit: fill;
+}
+
+footer .footerLinks {
+    color: var(--btn-color);
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    margin-top: auto;
+
+    -webkit-box-shadow: 0 -3px 5px 1px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0 -3px 5px 1px rgba(0,0,0,0.5);
+    box-shadow: 0 -3px 5px 1px rgba(0,0,0,0.5);
+}
+
+footer > .contactDivsContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+footer > .contactDivsContainer > .contactDiv {
+    display: flex;
+    flex-direction: column;
+}
+
+footer > .contactDivsContainer > .contactLabels > p {
+    text-align: right;
+}
+
+footer > .contactDivsContainer > .contactLinks > p {
+    text-align: left;
 }
